test and add play interface

--- a/rules.ipynb
+++ b/rules.ipynb
@@ -2,17 +2,50 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
     "from random import randint\n",
+    "import unittest\n",
+    "from os import system, name\n",
+    "from IPython.display import clear_output\n",
+    "\n",
+    "# return the marks to be added and array after move\n",
+    "def moveArray(array):\n",
+    "    assert(len(array) == 4)\n",
+    "    result = []\n",
+    "    lastIsSumed = False\n",
+    "    marksToBeAdded = 0\n",
+    "    for num in array:\n",
+    "        if num != 0:\n",
+    "            if len(result) == 0:\n",
+    "                result.append(num) \n",
+    "            elif result[-1] == num:\n",
+    "                if lastIsSumed:\n",
+    "                    result.append(num)\n",
+    "                    lastIsSumed = False\n",
+    "                else:\n",
+    "                    result[-1] += num\n",
+    "                    marksToBeAdded += 2 * num\n",
+    "                    lastIsSumed = True\n",
+    "            else:\n",
+    "                result.append(num)\n",
+    "                lastIsSumed = False\n",
+    "    result += [0] * (4 - len(result))\n",
+    "    return marksToBeAdded, result\n",
+    "\n",
+    "# We define down and right as forward direction\n",
+    "def getIthArrayInd(i, isRow, isForward):\n",
+    "    margin = 1 if isRow else 4\n",
+    "    direction = -1 if isForward else 1\n",
+    "    return [i * (5 - margin) + j * margin for j in range(4)[::direction]]\n",
     "\n",
     "class Obj_2048:\n",
     "    \n",
-    "    directions = {'right' : (True, True), \n",
+    "    directions = {'Right' : (True, True), \n",
     "                 'Down': (False, True),\n",
-    "                 'left' : (True, False),\n",
+    "                 'Left' : (True, False),\n",
     "                 'Up': (False, False)}\n",
     "    \n",
     "    def reset(self):\n",
@@ -32,62 +65,123 @@
     "    def getHighestNum(self):\n",
     "        return max(self._values)\n",
     "    \n",
-    "    # Array can be a row or a column\n",
-    "    # return the marks to be added\n",
-    "    def moveEntryInArray(array, ind):\n",
-    "        if (array[ind] != 0):\n",
-    "            for indBefore in range(ind)[::-1]:\n",
-    "                if (array[indBefore] != 0 and array[indBefore] == array[ind]):\n",
-    "                    array[indBefore] *= 2\n",
-    "                    array[ind] = 0\n",
-    "                    return array[indBefore]\n",
-    "        return 0\n",
-    "                        \n",
-    "    # return the marks to be added\n",
-    "    def moveArray(array):\n",
-    "        assert(len(array) == 4)\n",
-    "        marksToBeAdded = 0\n",
-    "        for ind in range(1,4):\n",
-    "            marksToBeAdded += moveEntryInArray(array, ind)\n",
-    "        return marksToBeAdded\n",
-    "    \n",
-    "    def unpackArray(self, indList, array):\n",
+    "    def _unpackArray(self, indList, array):\n",
     "        assert(len(indList) == 4)\n",
     "        for i in range(4):\n",
-    "            self._values[indList[i]] = array[indList[i]]\n",
-    "    \n",
-    "    # We define down and right as forward direction\n",
-    "    def getIthArrayInd(i, isRow, isForward):\n",
-    "        margin = lambda isRow: 1 if isRow else 4\n",
-    "        direction = lambda isForward: 1 if isForward else -1\n",
-    "        return [i + j * margin for j in range(4)[::direction]]\n",
+    "            self._values[indList[i]] = array[i]\n",
     "         \n",
-    "    def move(self,direction, isCheck):\n",
-    "        isRow, isForward = dirctions[direction]\n",
+    "    def _move(self,direction, isCheck):\n",
+    "        isRow, isForward = Obj_2048.directions[direction]\n",
     "        marksToBeAdded = 0\n",
+    "        canBeMoved = False\n",
     "        for i in range(4):\n",
     "            indList = getIthArrayInd(i, isRow, isForward)\n",
-    "            array = [self.values[ind] for ind in indList]\n",
-    "            mark = moveArray(array)\n",
+    "            array = [self._values[ind] for ind in indList]\n",
+    "            mark, result = moveArray(array)\n",
     "            #means something changed\n",
-    "            if (mark != 0):\n",
+    "            if (array != result):\n",
+    "                canBeMoved = True                          \n",
     "                #if it is a player's action, change the values\n",
     "                if not isCheck:\n",
-    "                    self.unpackArray(indList,array)\n",
+    "                    print(array)\n",
+    "                    print(result)\n",
+    "                    print(indList)\n",
+    "                    print(str(i) + \" above\")\n",
+    "                    self._unpackArray(indList,result)\n",
     "                marksToBeAdded += mark\n",
-    "        if not isCheck:\n",
+    "        if (not isCheck) and canBeMoved:\n",
     "            self._mark += marksToBeAdded\n",
-    "            self._step += 1\n",
-    "        else:\n",
-    "            return marksToBeAdded != 0\n",
+    "            self._steps += 1\n",
+    "        return canBeMoved\n",
     "        \n",
-    "    def isGameOver(self):\n",
-    "        for move in directions.keys():\n",
-    "            if (self.move(move, True)):\n",
+    "    def _isGameOver(self):\n",
+    "        for direction in Obj_2048.directions.keys():\n",
+    "            if (self._move(direction, True)):\n",
     "                return False\n",
     "        return True\n",
-    "            \n",
-    "    "
+    "    \n",
+    "    def _generateNext(self):\n",
+    "        tmp = []\n",
+    "        adj = [-4, -1 , 1, 4]\n",
+    "        for i in range(16):\n",
+    "            okToGenerate = False\n",
+    "            for j in adj:\n",
+    "                if i + j >= 16 or i + j < 0 or self._values[i] != 0:\n",
+    "                    okToGenerate = True\n",
+    "                    break\n",
+    "            if okToGenerate:\n",
+    "                tmp.append(i)\n",
+    "        self._values[tmp[randint(0,len(tmp) - 1)]] = 2 * (randint(0,1) + 1)\n",
+    "                    \n",
+    "    def play(self):\n",
+    "        ##get first 2 nums\n",
+    "        self._generateNext()\n",
+    "        self._generateNext()\n",
+    "        while(not self._isGameOver()):\n",
+    "            for i in range(4):\n",
+    "                print(self._values[i * 4: i * 4 + 4])\n",
+    "            print(\"marks: \" + str(self._mark))\n",
+    "            print(\"moves: \" + str(self._steps))\n",
+    "            direction = input(\"Enter next move:\")\n",
+    "            clear_output(wait=True)\n",
+    "            if (direction == \"exit\"):\n",
+    "                break\n",
+    "            if (direction in Obj_2048.directions.keys()):\n",
+    "                if self._move(direction, False):\n",
+    "                    self._generateNext()\n",
+    "            else:\n",
+    "                print('\\x1b[6;30;42m' + \"Please input one of \\\"Right, Up, Down, Left\\\"\" + '\\x1b[0m', end = \"\\r\")\n",
+    "        print(\"Game Over\")\n",
+    "        print(\"marks: \" + str(self._mark))\n",
+    "        print(\"moves: \" + str(self._steps))\n",
+    "        print(\"highest: \" + str(self.getHighestNum()))        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 0, 0, 2]\n",
+      "[2, 0, 0, 0]\n",
+      "[1, 5, 9, 13]\n",
+      "1 above\n",
+      "[4, 2, 0, 8]\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "[0, 0, 0, 0]\n",
+      "marks: 16\n",
+      "moves: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "game = Obj_2048()\n",
+    "game.play()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0, [2, 4, 8, 0])"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "moveArray([0,2,4,8])"
    ]
   }
  ],
