--- a/rules.ipynb
+++ b/rules.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,22 +166,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "from copy import deepcopy\n",
+    "import random \n",
+    "import math\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(0, [2, 4, 8, 0])"
-      ]
-     },
-     "execution_count": 188,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\sunt9\\anaconda3\\lib\\site-packages\\tensorflow\\python\\util\\dispatch.py:201: calling reduce_sum_v1 (from tensorflow.python.ops.math_ops) with keep_dims is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "keep_dims is deprecated, use keepdims instead\n",
+      "WARNING:tensorflow:From C:\\Users\\sunt9\\anaconda3\\lib\\site-packages\\tensorflow\\python\\training\\rmsprop.py:123: calling Ones.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
     }
    ],
    "source": [
-    "moveArray([0,2,4,8])"
+    "#first convolution layer depth\n",
+    "depth1 = 128\n",
+    "\n",
+    "#second convolution layer depth\n",
+    "depth2 = 128\n",
+    "\n",
+    "#batch size for batch gradient descent\n",
+    "batch_size = 512\n",
+    "\n",
+    "#input units\n",
+    "input_units = 16\n",
+    "\n",
+    "#fully connected layer neurons\n",
+    "hidden_units = 256\n",
+    "\n",
+    "#output neurons = number of moves\n",
+    "output_units = 4\n",
+    "\n",
+    "\n",
+    "#hyper parameters\n",
+    "start_learning_rate = 0.0005\n",
+    "\n",
+    "#gamma for Q-learning\n",
+    "gamma = 0.9\n",
+    "\n",
+    "#epsilon greedy approach\n",
+    "epsilon = 0.9\n",
+    "\n",
+    "#to store states and lables of the game for training\n",
+    "#states of the game\n",
+    "replay_memory = list()\n",
+    "\n",
+    "#labels of the states\n",
+    "replay_labels = list()\n",
+    "\n",
+    "#capacity of memory\n",
+    "mem_capacity = 6000\n",
+    "\n",
+    "#deprecated method \n",
+    "#todo: fix placeholder\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "tf.disable_v2_behavior() \n",
+    "\n",
+    "#input data\n",
+    "tf_batch_dataset = tf.placeholder(tf.float32,shape=(batch_size,4,4,16))\n",
+    "tf_batch_labels  = tf.placeholder(tf.float32,shape=(batch_size,output_units))\n",
+    "\n",
+    "single_dataset   = tf.placeholder(tf.float32,shape=(1,4,4,16))\n",
+    "\n",
+    "#CONV LAYERS\n",
+    "#conv layer1 weights\n",
+    "conv1_layer1_weights = tf.Variable(tf.truncated_normal([1,2,input_units,depth1],mean=0,stddev=0.01))\n",
+    "conv2_layer1_weights = tf.Variable(tf.truncated_normal([2,1,input_units,depth1],mean=0,stddev=0.01))\n",
+    "\n",
+    "#conv layer2 weights\n",
+    "conv1_layer2_weights = tf.Variable(tf.truncated_normal([1,2,depth1,depth2],mean=0,stddev=0.01))\n",
+    "conv2_layer2_weights = tf.Variable(tf.truncated_normal([2,1,depth1,depth2],mean=0,stddev=0.01))\n",
+    "\n",
+    "#FUllY CONNECTED LAYERS\n",
+    "expand_size = 2*4*depth2*2 + 3*3*depth2*2 + 4*3*depth1*2\n",
+    "fc_layer1_weights = tf.Variable(tf.truncated_normal([expand_size,hidden_units],mean=0,stddev=0.01))\n",
+    "fc_layer1_biases = tf.Variable(tf.truncated_normal([1,hidden_units],mean=0,stddev=0.01))\n",
+    "fc_layer2_weights = tf.Variable(tf.truncated_normal([hidden_units,output_units],mean=0,stddev=0.01))\n",
+    "fc_layer2_biases = tf.Variable(tf.truncated_normal([1,output_units],mean=0,stddev=0.01))\n",
+    "\n",
+    "#model\n",
+    "def model(dataset):\n",
+    "    #layer1\n",
+    "    conv1 = tf.nn.conv2d(dataset,conv1_layer1_weights,[1,1,1,1],padding='VALID') \n",
+    "    conv2 = tf.nn.conv2d(dataset,conv2_layer1_weights,[1,1,1,1],padding='VALID') \n",
+    "    \n",
+    "    #layer1 relu activation\n",
+    "    relu1 = tf.nn.relu(conv1)\n",
+    "    relu2 = tf.nn.relu(conv2)\n",
+    "    \n",
+    "    #layer2\n",
+    "    conv11 = tf.nn.conv2d(relu1,conv1_layer2_weights,[1,1,1,1],padding='VALID') \n",
+    "    conv12 = tf.nn.conv2d(relu1,conv2_layer2_weights,[1,1,1,1],padding='VALID') \n",
+    "\n",
+    "    conv21 = tf.nn.conv2d(relu2,conv1_layer2_weights,[1,1,1,1],padding='VALID') \n",
+    "    conv22 = tf.nn.conv2d(relu2,conv2_layer2_weights,[1,1,1,1],padding='VALID') \n",
+    "\n",
+    "    #layer2 relu activation\n",
+    "    relu11 = tf.nn.relu(conv11)\n",
+    "    relu12 = tf.nn.relu(conv12)\n",
+    "    relu21 = tf.nn.relu(conv21)\n",
+    "    relu22 = tf.nn.relu(conv22)\n",
+    "    \n",
+    "    #get shapes of all activations\n",
+    "    shape1 = relu1.get_shape().as_list()\n",
+    "    shape2 = relu2.get_shape().as_list()\n",
+    "    \n",
+    "    shape11 = relu11.get_shape().as_list()\n",
+    "    shape12 = relu12.get_shape().as_list()\n",
+    "    shape21 = relu21.get_shape().as_list()\n",
+    "    shape22 = relu22.get_shape().as_list()\n",
+    "\n",
+    "    #expansion\n",
+    "    hidden1 = tf.reshape(relu1,[shape1[0],shape1[1]*shape1[2]*shape1[3]])\n",
+    "    hidden2 = tf.reshape(relu2,[shape2[0],shape2[1]*shape2[2]*shape2[3]])\n",
+    "    \n",
+    "    hidden11 = tf.reshape(relu11,[shape11[0],shape11[1]*shape11[2]*shape11[3]])\n",
+    "    hidden12 = tf.reshape(relu12,[shape12[0],shape12[1]*shape12[2]*shape12[3]])\n",
+    "    hidden21 = tf.reshape(relu21,[shape21[0],shape21[1]*shape21[2]*shape21[3]])\n",
+    "    hidden22 = tf.reshape(relu22,[shape22[0],shape22[1]*shape22[2]*shape22[3]])\n",
+    "\n",
+    "    #concatenation\n",
+    "    hidden = tf.concat([hidden1,hidden2,hidden11,hidden12,hidden21,hidden22],axis=1)\n",
+    "\n",
+    "    #full connected layers\n",
+    "    hidden = tf.matmul(hidden,fc_layer1_weights) + fc_layer1_biases\n",
+    "    hidden = tf.nn.relu(hidden)\n",
+    "\n",
+    "    #output layer\n",
+    "    output = tf.matmul(hidden,fc_layer2_weights) + fc_layer2_biases\n",
+    "    \n",
+    "    #return output\n",
+    "    return output\n",
+    "\n",
+    "#for single example\n",
+    "single_output = model(single_dataset)\n",
+    "\n",
+    "#for batch data\n",
+    "logits = model(tf_batch_dataset)\n",
+    "\n",
+    "#loss\n",
+    "loss = tf.square(tf.subtract(tf_batch_labels,logits))\n",
+    "loss = tf.reduce_sum(loss,axis=1,keep_dims=True)\n",
+    "loss = tf.reduce_mean(loss)/2.0\n",
+    "\n",
+    "#optimizer\n",
+    "global_step = tf.Variable(0)  # count the number of steps taken.\n",
+    "learning_rate = tf.train.exponential_decay(float(start_learning_rate), global_step, 1000, 0.90, staircase=True)\n",
+    "optimizer = tf.train.RMSPropOptimizer(learning_rate).minimize(loss, global_step=global_step)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#loss\n",
+    "J = []\n",
+    "\n",
+    "#scores\n",
+    "scores = []\n",
+    "\n",
+    "#to store final parameters\n",
+    "final_parameters = {}\n",
+    "\n",
+    "#number of episodes\n",
+    "M = 200001"
    ]
   }
  ],
